@@ -1596,7 +1596,7 @@ static long smscconn_failure_reason_to_smpp_status(long reason)
 
 
 static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
-                       long *pending_submits)
+                      long *pending_submits)
 {
     SMPP_PDU *resp = NULL;
     Octstr *os;
@@ -1605,8 +1605,24 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
     long reason, cmd_stat;
     int ret = 0;
 
+    /*
+     * In order to keep the protocol implementation logically clean,
+     * we will obey the required SMPP session state while processing
+     * the PDUs, see Table 2-1, SMPP v3.4 spec, section 2.3, page 17.
+     * Therefore we will interpret our abstracted smpp->conn->status
+     * value as SMPP session state here.
+     */
     switch (pdu->type) {
         case data_sm:
+            /*
+             * Session state check
+             */
+            if (!(smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV)) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session not bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
             resp = smpp_pdu_create(data_sm_resp, pdu->u.data_sm.sequence_number);
             /*
              * If SMSCConn stopped then send temp. error code
@@ -1661,6 +1677,16 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             break;
 
         case deliver_sm:
+            /*
+             * Session state check
+             */
+            if (!(smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV)) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session not bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
+
             /*
              * If SMSCConn stopped then send temp. error code
              */
@@ -1721,13 +1747,31 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             break;
 
         case enquire_link:
+            /*
+             * Session state check
+             */
+            if (!(smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV)) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session not bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
             resp = smpp_pdu_create(enquire_link_resp,
                         pdu->u.enquire_link.sequence_number);
             break;
 
         case enquire_link_resp:
+            /*
+             * Session state check
+             */
+            if (!(smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV)) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session not bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
             if (pdu->u.enquire_link_resp.command_status != 0) {
-                error(0, "SMPP[%s]: SMSC got error to enquire_link, code 0x%08lx (%s).",
+                error(0, "SMPP[%s]: SMSC got error to enquire_link PDU, code 0x%08lx (%s).",
                       octstr_get_cstr(smpp->conn->id),
                       pdu->u.enquire_link_resp.command_status,
                 smpp_error_to_string(pdu->u.enquire_link_resp.command_status));
@@ -1735,11 +1779,20 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             break;
 
         case submit_sm_resp:
+            /*
+             * Session state check
+             */
+            if (!(smpp->conn->status == SMSCCONN_ACTIVE)) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session not bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
+
             os = octstr_format("%ld", pdu->u.submit_sm_resp.sequence_number);
             smpp_msg = dict_remove(smpp->sent_msgs, os);
             octstr_destroy(os);
             if (smpp_msg == NULL) {
-                warning(0, "SMPP[%s]: SMSC sent submit_sm_resp "
+                warning(0, "SMPP[%s]: SMSC sent submit_sm_resp PDU "
                         "with wrong sequence number 0x%08lx",
                         octstr_get_cstr(smpp->conn->id),
                         pdu->u.submit_sm_resp.sequence_number);
@@ -1755,7 +1808,7 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
 
             if (pdu->u.submit_sm_resp.command_status != 0) {
                 error(0, "SMPP[%s]: SMSC returned error code 0x%08lx (%s) "
-                      "in response to submit_sm.",
+                      "in response to submit_sm PDU.",
                       octstr_get_cstr(smpp->conn->id),
                       pdu->u.submit_sm_resp.command_status,
                       smpp_error_to_string(pdu->u.submit_sm_resp.command_status));
@@ -1813,7 +1866,7 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             } /* end if for SMSC ACK */
             else {
                 error(0, "SMPP[%s]: SMSC returned error code 0x%08lx (%s) "
-                      "in response to submit_sm, but no `message_id' value!",
+                      "in response to submit_sm PDU, but no `message_id' value!",
                       octstr_get_cstr(smpp->conn->id),
                       pdu->u.submit_sm_resp.command_status,
                       smpp_error_to_string(pdu->u.submit_sm_resp.command_status));
@@ -1823,6 +1876,15 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             break;
 
         case bind_transmitter_resp:
+            /*
+             * Session state check
+             */
+            if (smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
             if (pdu->u.bind_transmitter_resp.command_status != 0 &&
                 pdu->u.bind_transmitter_resp.command_status != SMPP_ESME_RALYNBD) {
                 error(0, "SMPP[%s]: SMSC rejected login to transmit, code 0x%08lx (%s).",
@@ -1848,6 +1910,15 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             break;
 
         case bind_transceiver_resp:
+            /*
+             * Session state check
+             */
+            if (smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
             if (pdu->u.bind_transceiver_resp.command_status != 0 &&
                 pdu->u.bind_transceiver_resp.command_status != SMPP_ESME_RALYNBD) {
                 error(0, "SMPP[%s]: SMSC rejected login to transmit, code 0x%08lx (%s).",
@@ -1873,6 +1944,15 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             break;
 
         case bind_receiver_resp:
+            /*
+             * Session state check
+             */
+            if (smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
             if (pdu->u.bind_receiver_resp.command_status != 0 &&
                 pdu->u.bind_receiver_resp.command_status != SMPP_ESME_RALYNBD) {
                 error(0, "SMPP[%s]: SMSC rejected login to receive, code 0x%08lx (%s).",
@@ -1899,6 +1979,15 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             break;
 
         case unbind:
+            /*
+             * Session state check
+             */
+            if (!(smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV)) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session not bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
             resp = smpp_pdu_create(unbind_resp, pdu->u.unbind.sequence_number);
             mutex_lock(smpp->conn->flow_mutex);
             smpp->conn->status = SMSCCONN_DISCONNECTED;
@@ -1907,12 +1996,31 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             break;
 
         case unbind_resp:
+            /*
+             * Session state check
+             */
+            if (!(smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV)) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session not bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
             mutex_lock(smpp->conn->flow_mutex);
             smpp->conn->status = SMSCCONN_DISCONNECTED;
             mutex_unlock(smpp->conn->flow_mutex);
             break;
 
         case generic_nack:
+            /*
+             * Session state check
+             */
+            if (!(smpp->conn->status == SMSCCONN_ACTIVE ||
+                    smpp->conn->status == SMSCCONN_ACTIVE_RECV)) {
+                warning(0, "SMPP[%s]: SMSC sent %s PDU while session not bound, ignored.",
+                        octstr_get_cstr(smpp->conn->id), pdu->type_name);
+                return 0;
+            }
+
             cmd_stat  = pdu->u.generic_nack.command_status;
 
             os = octstr_format("%ld", pdu->u.generic_nack.sequence_number);
@@ -1928,7 +2036,7 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
                 msg = smpp_msg->msg;
                 smpp_msg_destroy(smpp_msg, 0);
 
-                error(0, "SMPP[%s]: SMSC returned error code 0x%08lx (%s) in response to submit_sm.",
+                error(0, "SMPP[%s]: SMSC returned error code 0x%08lx (%s) in response to submit_sm PDU.",
                       octstr_get_cstr(smpp->conn->id),
                       cmd_stat,
                 smpp_error_to_string(cmd_stat));
@@ -1950,8 +2058,8 @@ static int handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
             break;
         
         default:
-            error(0, "SMPP[%s]: Unknown PDU type 0x%08lx, ignored.",
-                  octstr_get_cstr(smpp->conn->id), pdu->type);
+            error(0, "SMPP[%s]: Unhandled %s PDU type 0x%08lx, ignored.",
+                  octstr_get_cstr(smpp->conn->id), pdu->type_name, pdu->type);
             /*
              * We received an unknown PDU type, therefore we will respond
              * with a generic_nack PDU, see SMPP v3.4 spec, section 3.3.
